test/libsolidity/syntaxTests/constructor/public_constructor_abstract.sol
abstract contract C {
	constructor() public {}
}
// ----
// DeclarationError 8295: (23-46='constructor() public {}'): Abstract contracts cannot have public constructors. Remove the "public" keyword to fix this.
